--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ base {
 }
 
 repositories {
+    mavenCentral()
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -63,6 +64,7 @@ java {
     // If you remove this line, sources will not be generated.
     withSourcesJar()
 }
+
 
 jar {
     from("LICENSE") {
