--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,14 @@ dependencies {
 processResources {
     inputs.property "version", project.version
     inputs.property "minecraft_version", project.minecraft_version
+    inputs.property "minecraft_multi_version", project.minecraft_multi_version
     inputs.property "loader_version", project.loader_version
     filteringCharset "UTF-8"
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version,
                 "minecraft_version": project.minecraft_version,
+                "minecraft_multi_version": project.minecraft_multi_version,
                 "loader_version": project.loader_version
     }
 }
