--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,12 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
 	minecraft_version=1.21
+	minecraft_multi_version=1.21.*
 	loader_version=0.15.11
     fabric_version=0.100.1+1.21
 
 # Mod Properties
-	mod_version = 1.4
+	mod_version = 1.5
 	maven_group = com.enderium
 	archives_base_name = SmartBlockPlacement
 
